[gd_scene load_steps=6 format=3 uid="uid://bos4qlgett1th"]

[ext_resource type="Script" uid="uid://b5124mvoehedo" path="res://Code/Scenes/UI/Cards/power_item.gd" id="1_eb561"]
[ext_resource type="Texture2D" uid="uid://dmlnngpyb3if" path="res://Art/ETCIcons/Pokebody.png" id="2_g2tyk"]
[ext_resource type="Resource" uid="uid://s8mcx8qnuqkw" path="res://Resources/Components/Pokemon/Abilities/Powers/BabyEvoAzurill.tres" id="2_ts83y"]
[ext_resource type="Theme" uid="uid://bfw6ylcttychc" path="res://Themes/Themes/AverageButton.tres" id="3_g2tyk"]
[ext_resource type="Texture2D" uid="uid://ct1rslwcfpy1y" path="res://Art/ETCIcons/Pokepower.png" id="4_akvy3"]

[node name="AbilityItem" type="MarginContainer"]
custom_minimum_size = Vector2(396, 0)
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -27.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 2
script = ExtResource("1_eb561")
body_icon = ExtResource("2_g2tyk")
ability = ExtResource("2_ts83y")

[node name="AbilityButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme = ExtResource("3_g2tyk")
theme_type_variation = &"PowerButton"

[node name="AllText" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="AllText"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 4

[node name="Base Text" type="HBoxContainer" parent="AllText"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="AllText/Base Text"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_right = 20

[node name="Icon" type="TextureRect" parent="AllText/Base Text"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("4_akvy3")

[node name="Name" type="RichTextLabel" parent="AllText/Base Text"]
unique_name_in_owner = true
custom_minimum_size = Vector2(190, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
bbcode_enabled = true
text = "[center]Everyone Explode Now"
fit_content = true

[node name="MarginContainer2" type="MarginContainer" parent="AllText/Base Text"]
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_right = 15

[node name="MarginContainer3" type="MarginContainer" parent="AllText"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 1

[node name="EffectContainer" type="HBoxContainer" parent="AllText"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer2" type="MarginContainer" parent="AllText/EffectContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_right = 4

[node name="EffectText" type="RichTextLabel" parent="AllText/EffectContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
mouse_filter = 2
theme_override_font_sizes/bold_italics_font_size = 12
theme_override_font_sizes/italics_font_size = 12
theme_override_font_sizes/mono_font_size = 12
theme_override_font_sizes/normal_font_size = 12
theme_override_font_sizes/bold_font_size = 12
text = "HUGE EFFECT TEX LIKE SUPER HUGE, JUST SAY EVERYTHING YOU EVER WANTED TO SAY, YOUR WILL YOUR DECLARATION. MAYBE THROW IN THAT 10 HOUR VIDEO ESSAY YOU LIKED SO MUCH. MAYBE NOT... SORRY"
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="AllText/EffectContainer"]
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_right = 4

[node name="MarginContainer2" type="MarginContainer" parent="AllText"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 4

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="minimum_size_changed" from="AbilityButton" to="." method="_on_attack_button_minimum_size_changed"]
[connection signal="pressed" from="AbilityButton" to="." method="_on_ability_button_pressed"]
[connection signal="resized" from="AbilityButton" to="." method="_on_attack_button_resized"]
